# ChangeLog for app-office/libreoffice
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-office/libreoffice/ChangeLog,v 1.477 2013/06/20 11:40:50 scarabeus Exp $

*libreoffice-4.0.4.2 (20 Jun 2013)

  20 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org> +libreoffice-4.0.4.2.ebuild,
  -libreoffice-4.0.3.3.ebuild, libreoffice-4.0.9999.ebuild,
  libreoffice-4.1.9999.ebuild, libreoffice-9999-r2.ebuild:
  Version bump to 4.0.4.2. Fixes bug#473806 and bug#473848. Drop 4.0.3.

  04 Jun 2013; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Raise dependency over doxygen package.

  30 May 2013; Tomáš Chvátal <scarabeus@gentoo.org>
  -files/libreoffice-3.6.4.3-boost-1.53.0.patch, -libreoffice-3.6.4.3.ebuild:
  Drop old libreoffice keep only one 3.6 version.

  27 May 2013; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-4.1.9999.ebuild,
  libreoffice-9999-r2.ebuild:
  Fix typo.

*libreoffice-4.1.9999 (22 May 2013)

  22 May 2013; Tomáš Chvátal <scarabeus@gentoo.org>
  +libreoffice-4.1.9999.ebuild:
  Add live ebuild for 4.1 branch.

  21 May 2013; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Few obvious cleanups before branching, removed options/updated deps, etc.

  19 May 2013; Andreas K. Huettel <dilfridge@gentoo.org>
  files/generate_libreoffice_package.sh:
  Update script

  11 May 2013; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-3.6.4.3.ebuild,
  libreoffice-3.6.6.2.ebuild, libreoffice-3.6.9999.ebuild,
  libreoffice-4.0.3.3.ebuild, libreoffice-4.0.9999.ebuild:
  Older versions require old mdds due to incompatible api change. Wrt
  bug#469318.

  09 May 2013; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Require latest mdds.

  08 May 2013; Tomáš Chvátal <scarabeus@gentoo.org> libreoffice-9999-r2.ebuild:
  Drop removed option. It defaults to what we want now.

*libreoffice-4.0.3.3 (06 May 2013)
