@@ -25,26 +25,26 @@ DIST libreoffice-help-3.6.6.2.tar.xz 1860668 SHA256 b3ebb29bb6077ccdeb65e5ae883a
 DIST libreoffice-help-4.0.4.2.tar.xz 1855588 SHA256 9d7f732760b24b6916266903913d7684d9b933640174b1e041d729914beb5a4e SHA512 848329df801dfba2b06006325371e7a51354bebe0e99ba98aca14d3e3882de0ccde902b440cb1e47984585350f7e4f48b779b36281d9844251e802245633bd30 WHIRLPOOL a7048fbddaa81eb0c97f86902054195c66f84babe42ac1e088338ba019b07283a9049b70554800224ad50ee9097b2e57b4493527177a9599d9251c42894da20f
 EBUILD libreoffice-3.6.6.2.ebuild 17510 SHA256 5753c1cfeff1637b21296ffe7969537aca4c358674ccd0d3fdecf63c6a006128 SHA512 9886c1a3f68e1d3d4be89a08d57077d3e865d7b4f63fd839a51455d0d0c59644ed5226da1a68fe24a807b21ec17feafef3884e967e1e33d0b5302218237b4821 WHIRLPOOL 36fa5f23f5de20dbeb9dcc6f2c67a0fff7398b38979bcf1d9d1f483eb12ab16b21baba5b6ae48e45f245f94393692e73c188725f92c92fe9cfa5f75f31ebb9f7
 EBUILD libreoffice-3.6.9999.ebuild 17515 SHA256 873e3a2bf8e09ae65ad30cc050c61aacd27b295187e9576215fa9158a70c3a57 SHA512 be8b6f5ccbb8d87f0033873d30ec457497a9b7dbc8c272b992275c520df4aa70210e9a27804504ecb61ae58f97b4c95ad7f92049e066db4f24ba66c21ad4eda3 WHIRLPOOL f28f5e104422a1dc9b5e5aa371f0af662142c363f953e8e8870ec40dcdeda5d9af8785d60a05bc52fc155de9a788e9fcd8e20c071e16b87eecf79fd4fbbf8ef9
-EBUILD libreoffice-4.0.4.2.ebuild 17487 SHA256 d0bc973bd6df30994c9a045942fe81a9f8f2845c3f7b29fcb0e0df4d42f2dfdb SHA512 5dad96578ea308570e3b484dde60844e6671ed0da4e8aa3d89307a533ec6c6c62bacd870170ba4e324cfea3a75ec07798a5cfc91aec220bab4017fbc27beb9cc WHIRLPOOL 46db531aead74baa56c353409578de63dc0c158661cc21e670c2e47222f95a089689c4d89072d03415941c71f5afc22b8e1a29d4b248e482325f2ad0316df297
-EBUILD libreoffice-4.0.9999.ebuild 17489 SHA256 7af6739656a6f9f9af8bbdbeabe9bf8427f05ebeab43603fb7fb0db3bd036457 SHA512 a843715c8397bd8438497b467dfa0847a83d2835af4c75c1af021bb91e64fea2ff2e961b2ee8f6731e603b8f94a9a977cc57236f6f5963f4743283a416ad619e WHIRLPOOL 25080d55caa854a9d7339f0bca621ce5759ad7a0bd11c16da970e7c95891bb8841244a8a1a4d2ec944f4117039371e5c17322c0a5c472c97036e8aa7a84361b9
-EBUILD libreoffice-4.1.9999.ebuild 17230 SHA256 3d44bcde6d1dd52a380af522dbd26f872d0ff7d87a43af4daf5da0f9b51b9935 SHA512 b54f3d5e82ca6565dd5d4d90b127e4ec762e2b3fdae2e209bf5c2af40f876ee1ee8c16725e004a738934dff9ab18b41346efa0589e18e22bd44cb6a2f2d965b3 WHIRLPOOL 076c68893abd814c10dc74d4864fd81c2c9584d140d5b0fbdf80c3e815c7bea973a051958a78d773ad3ed40083075f5bfc8efea952df6975490c125fe8bb9134
-EBUILD libreoffice-9999-r2.ebuild 17317 SHA256 e7d755da0877099af10fc725f48dcf1b88a18d2f5aaa87766690e6abff9d686b SHA512 806dd21a8e0cdca5554b53d4fe38058636968f1150dc1b81cb9b7b19f83530f6e264b7bf94e418c9a6607a0acd31ae2c5b6f4d2b1cc6ab9cbcd23dbe85ec345e WHIRLPOOL 0d392c7185970c6aa68de6b2132d968b8a135d17a1c48d6c66656fa278fbe0b52aafa757ef0f7473e14642b984b0006d35ed3701223c6f660635caf37d7ec880
-MISC ChangeLog 86467 SHA256 8ef42c8103e50e64a9382843e204fe9c87d74dcdc2d074999fe02efb5067d375 SHA512 e0ccd4b639f3f89a0983f7f3ac07703adfc12b9c66d25936e86f8d05dfc70714e5cf68791319b41ae6157074e4d6e613d3706d2a24ad31b0045edbad1ea5a8c1 WHIRLPOOL 8f87ea08d0a018fe07a1736f3167a7491a00d42030acf33bc6269a0e509761ef87dd18ac154250d6104c78a9f39c155930434b142b7b077894a3425966fe4b80
+EBUILD libreoffice-4.0.4.2.ebuild 17507 SHA256 12cdcda41b1ea922cb6d36b9747b7dab26df0d78997152d185982408b9852b1c SHA512 1f6fb31d66c3055622fb33290cfb8ec1241f237088d3a9036923d11b4edd80604255425ef196902ef9d5706e5abaac49869fb3ed45e1111750a778cf4e15a5e3 WHIRLPOOL ca561ca3c52c3bb245cb96886970c52f1d98595337c8e9ab01faf6f4271e531d272e2bfc857c22b31df7463c633ba0f3b514065db12ade1f49f7b5af08235cc6
+EBUILD libreoffice-4.0.9999.ebuild 17509 SHA256 56c60b5c5835066b12944ec262a1c59fe2f061128369b07a5753d4a529efa8cb SHA512 2ec7eeed14ee7833bb36944ecd48ca3f75c9cb490126920e1283d194f93013872130f09a4218d20a502d2c0ec42aa02e5c7efd370b7ebea6f5c4406dc721c637 WHIRLPOOL 59364598f37f8ff34ec9c8423f47525ab691a1936f2ed2fdc0b3b585569d482f036c9c496562d0007e658d3739ad5fdc1e1586f40adb5c2879643c41b2e15356
+EBUILD libreoffice-4.1.9999.ebuild 17250 SHA256 c090876b94abc09f7abc49f5a57e84a196fa87782ff994764895be9ebcc0a999 SHA512 0ae860c5e0c15d3af87e98e6a7333eb240a8123ba6640c2cd718d6680bb8f0e38f4ec9606b87b49fdb9528ce0ee4a1301df6d7df0ccf23cf3b8f97f7415a22ff WHIRLPOOL d8ffcc3d6bf9349d4e6eca77a5f985ef66eaf68dd931ffd4f3768fe3a4963208f8e02165f4816c302444517fce21ad511e5b94e07fd2a2a8276a84bf17ed3eaf
+EBUILD libreoffice-9999-r2.ebuild 17337 SHA256 45528a79e10192d1ca7bacb5a52ab6b3d929d04e261fef8925009b22eccfaf66 SHA512 4543f683d5bc8a757c776922094d16559489645fa52042dde9eede8d0477101a035900ff081966bf34b89cd2661515f1fc6cc91b39dfaaddba80a34653dd67a3 WHIRLPOOL 712d62381b1bc19d7515f7eee210fb8bddd95d8943146b383434cd97a8b6a4fbb6db9b10b303b0ae19db346e2cf73257719e1594180c938ccee894d66c4a064c
+MISC ChangeLog 86735 SHA256 b5cc19887acc2fbe4415249fc6434d67c79fe039c0457846cbddef2b6666aceb SHA512 b17794f8d3031d3c21a29aa091873a833c8ed5f226482a317230ba0ec4ba96ff2ae21fe1106f8b4c2385da2ee245e51577010ae2638a5bc4787c5040a8973851 WHIRLPOOL 3bc3a9f40ab770eeecf4426344ab000b8f4aa22e09e31176ba9992a4dc2185620ad55d05e284b99a84f37e6a0e6160159fe2162c7fb0e7bd33477cfdf73c8e06
 MISC metadata.xml 1176 SHA256 c1690efe4b2a0fa49801e5cbe66637e25ba71fb902115a75d363f6fe7dc444fb SHA512 2889263d6cf5388d402b2c3999d471e2a2e8c852dcd50755d9f6fd7a549e8b70af7afb66d2f58bc8b9f7bedb4d01a05dda6159c5433a5fdce20ba69f49b9d1b1 WHIRLPOOL e4b548267c79bee3de7bdec839c0fd4d2f1166ded0464d65e6103e63ffb8fb9c08c6a9ff0d01ab09c02826ff1b0b0233a55c5d49b701e963d8c732685b3267dd
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCAAGBQJRwu11AAoJEOSiRoyO7jvo8y8QAI89pznQXAOhScc9DpaPk/dH
-9JZB4zBcjSTB3/mTnj+qtj6WCKBzLnGF3ybjkWh/pGHZ0Mr4MOyG3Ernl16w/ALZ
-LBnfGVFD1CvxJSZ43ScVDmpZJqklAcV53+gJjK/NdPS+6BI+lP1/YocdwVqsVD8d
-rg3sulhvOSRHDfTnYCZyJlAShcsGdw/8RGhc7CWS6ovTwElWmWNG2Q6peaNKllLQ
-E0AgXreNmDBLFGL/6Q0DDb8YrHYnJ9TpHozH6p1Ot7SZZQtS1Y81A/tU8ruk9JwC
-A0m4SsQVSp4L8HO/ENyUcp9zYV9u8erLuU8k7/M8U6pze2z7pDTRJzU8YvZF6NF2
-HH4Vz4L5aSBl/m4OeMplwjJPG/g2ghDbwjr5BewY5EwjbQnZAECPjQw/cCe2gAT8
-rHYQGw3Z1fQFl44pROJcFC4SxVoUzwF+lz+DAyGpewFk389jbVT742zkW/IlA3cc
-nePObEVQcfw9hz6PPRTmGKxrjTOZP2ZihzXdkcN4VO/fG4B8zFMc29bSQKHO5RnM
-9Ien2PhiNBtHAdKPHDr3l+2ev6JqoT479n0W0Z0OJJKPGf2zUdxO0Qnpnv2SfxYF
-/FejlNiv70Y3OKWKLJyo1OeKpMQNV3aFPrbjRiQiZ4U/KwOhiAlAH8tLgQ6rd2Pk
-J95aS5DSYEI5yEJg8k19
-=8+jx
+iQIcBAEBCAAGBQJRxsJOAAoJEOSiRoyO7jvo24sP+wSiosle/LuIxjkN3/QVMTbV
+Wu64xBn6Yl/ZfgPNP1fF+uVHWJL2B/+8dz+mQBhByUWKwnfQUG2sJkt6x/7ZP7FV
+nyboR6m8ZpDg6eZ2dWEF0kfSHkQItbxMsS9dWlMB8ZYuwW0FNWaYNX4Rep3cZcgA
+ffWh92gr9U8J4lsQdkA6iX8l6CWEGpWMt7gN0oZElL8bB0HVj06gMFE5fNIJKz2y
+NsKTcYwYvVhXPozFegj5gMJcxApsNBpUz8D3xrwf0JR76kRgLvz/6YEiZZ0QubIR
+rrikQi4tQ7eBUXllxu2ruao206NWUh3YsA8KaZHrY7zrpSls+eB+MGwHOCWivfws
+tle8DZ/64QwWQJ+Eq0hb5wqQkma0CvXVK1joaxQUVvxuA8SdfwbFWXCTr5nrsRBt
+32uzV4IC7LKztPYnXOa6t7i8EPnip8yfnT/TRIacrDod+/TrUPxF0JWinj7gm+ac
+2trn2iM1H1xtQDZ54wHBNUmvfuVAhoZqcO7X02m5j3nmWULyKOMNuaDTUTkiC4PX
+/yu6fGlUs6UIcAZdymoqHy9168X5jRv45tW+KfuCmEgq4M0ngFv51h3+Z+tWd3DX
+W2NN9Z20cNoLS6nRofbN5HYV0Ms7sfAh6D1aZqvHHBOlVKftDuUZU19nPvD9ao1g
+sKn4lSckal52HV6XsMcn
+=hAU7
 -----END PGP SIGNATURE-----
